--- a/product/2.html
+++ b/product/2.html
@@ -43,8 +43,8 @@
         </div>
         <div class="hidden md:block">
           <div class="ml-10 flex items-baseline space-x-8">
-            <a href="#accueil" class="text-white hover:text-accent transition-colors duration-300">Accueil</a>
-            <a href="/gen/product" class="text-white hover:text-accent transition-colors duration-300">Product</a>
+            <a href="/public/" class="text-white hover:text-accent transition-colors duration-300">Accueil</a>
+            <a href="/public/product" class="text-white hover:text-accent transition-colors duration-300">Product</a>
             <a href="#temoignages" class="text-white hover:text-accent transition-colors duration-300">Témoignages</a>
             <a href="#contact" class="text-white hover:text-accent transition-colors duration-300">Contact</a>
           </div>
@@ -67,8 +67,8 @@
     <!-- Mobile menu -->
     <div class="md:hidden hidden" id="mobile-menu">
       <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-dark bg-opacity-90">
-        <a href="#accueil" class="text-white block px-3 py-2 rounded-md hover:text-accent">Accueil</a>
-        <a href="/gen/product" class="text-white block px-3 py-2 rounded-md hover:text-accent">Product</a>
+        <a href="/public/" class="text-white block px-3 py-2 rounded-md hover:text-accent">Accueil</a>
+        <a href="/public/product" class="text-white block px-3 py-2 rounded-md hover:text-accent">Product</a>
         <a href="#temoignages" class="text-white block px-3 py-2 rounded-md hover:text-accent">Témoignages</a>
         <a href="#contact" class="text-white block px-3 py-2 rounded-md hover:text-accent">Contact</a>
       </div>
